# Vimdows

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vimdows.make  mingw.lua  premake5.lua
Buildenv/: Dockerfile
Scripts/: BuildDockerImage.ps1  Build_Debug_Win64.bat  Build_Debug_x86_64.ps1  Build_Docker_Image.ps1  Clean_Debug_Win64.bat  GenerateMakefile.ps1
Source/: Main.cpp
